@@ -1,11 +1,12 @@
 2011-06-15  Xavier Perseguers  <xavier@causal.ch>
 
+	* [TASK] #27396: Follow-up to keep most of the old DIV/SPAN classes
 	* [TASK] Update l10n API calls for TYPO3 4.6.0
 
 2011-06-13  Xavier Perseguers  <xavier@causal.ch>
 
 	* [TASK] Add RELEASE_NOTES to upgrade from egovapi 1.2 to 1.3
-	* [TASK][!!!] Add markup for microformat in office address
+	* [TASK][!!!] #27396 Add markup for microformat in office address
 
 2011-06-12  Xavier Perseguers  <xavier@causal.ch>
 
